scala-oldish/odersky-examples/implicit-conversions-and-parameters/transcript.txt
/*
 * Copyright (C) 2007-2016 Artima, Inc. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * Automatically generated Scala interpreter transcript from:
 *
 * Programming in Scala (Third Edition)
 * by Martin Odersky, Lex Spoon, Bill Venners
 *
 * http://booksites.artima.com/programming_in_scala_3ed
 */


scala> val i: Int = 3.5
<console>:7: error: type mismatch;
 found   : Double(3.5)
 required: Int
       val i: Int = 3.5
                    ^

scala> implicit def doubleToInt(x: Double) = x.toInt
warning: there were 1 feature warning(s); re-run with -feature for details
doubleToInt: (x: Double)Int

scala> val i: Int = 3.5
i: Int = 3

scala> class Rational(n: Int, d: Int) {
           def this(n: Int) = this(n, 1)
           private def gcd(a: Int, b: Int): Int = if (b == 0) a else gcd(b, a % b)
           private val g = gcd(n, d)
           val numer: Int = n / g
           val denom: Int = d / g    
       
           def +(that: Rational): Rational =
             new Rational(numer * that.denom + that.numer * denom,
                          denom * that.denom)
           def +(that: Int): Rational = this + new Rational(that)
       
           override def toString() = numer + "/" + denom
         }
defined class Rational

scala> val oneHalf = new Rational(1, 2)
oneHalf: Rational = 1/2

scala> oneHalf + oneHalf
res0: Rational = 1/1

scala> oneHalf + 1
res1: Rational = 3/2

scala> implicit def intToRational(x: Int) = 
         new Rational(x, 1)
warning: there were 1 feature warning(s); re-run with -feature for details
intToRational: (x: Int)Rational

scala> 1 + oneHalf
res2: Rational = 3/2

scala>   class PreferredPrompt(val preference: String)

defined class PreferredPrompt

scala>   object Greeter {
           def greet(name: String)(implicit prompt: PreferredPrompt) = {
             println("Welcome, " + name + ". The system is ready.")
             println(prompt.preference)
           }
         }

defined object Greeter

scala> val bobsPrompt = new PreferredPrompt("relax> ")
bobsPrompt: PreferredPrompt = PreferredPrompt@2f7f5da2

scala> Greeter.greet("Bob")(bobsPrompt)                    
Welcome, Bob. The system is ready.
relax> 

scala>   object JoesPrefs {
           implicit val prompt = new PreferredPrompt("Yes, master> ")
         }

defined object JoesPrefs

scala> Greeter.greet("Joe")
<console>:13: error: could not find implicit value for parameter prompt: PreferredPrompt
              Greeter.greet("Joe")
                           ^

scala> import JoesPrefs._         
import JoesPrefs._

scala> Greeter.greet("Joe")
Welcome, Joe. The system is ready.
Yes, master> 

scala> Greeter.greet("Joe") 
Welcome, Joe. The system is ready.
Yes, master> 

scala> import JoesPrefs._
import JoesPrefs._

scala> Greeter.greet("Joe")(prompt, drink)
<console>:20: error: too many arguments for method greet: (implicit prompt: PreferredPrompt)Unit
              Greeter.greet("Joe")(prompt, drink)
                                  ^

scala> Greeter.greet("Joe")
Welcome, Joe. The system is ready.
Yes, master> 

scala>   class PreferredPrompt(val preference: String)
         class PreferredDrink(val preference: String)
       
         object Greeter {
           def greet(name: String)(implicit prompt: PreferredPrompt,
               drink: PreferredDrink) = {
       
             println("Welcome, " + name + ". The system is ready.")
             print("But while you work, ")
             println("why not enjoy a cup of " + drink.preference + "?")
             println(prompt.preference)
           }
         }
       
         object JoesPrefs {
           implicit val prompt = new PreferredPrompt("Yes, master> ")
           implicit val drink = new PreferredDrink("tea")
         }

defined class PreferredPrompt
defined class PreferredDrink
defined object Greeter
defined object JoesPrefs

scala>   def maxListImpParm[T](elements: List[T])
               (implicit ordering: Ordering[T]): T =
       
           elements match {
             case List() => 
               throw new IllegalArgumentException("empty list!")
             case List(x) => x
             case x :: rest =>
               val maxRest = maxListImpParm(rest)(ordering)
               if (ordering.gt(x, maxRest)) x
               else maxRest
           }

maxListImpParm: [T](elements: List[T])(implicit ordering: Ordering[T])T

scala> maxListImpParm(List(1,5,10,3))
res9: Int = 10

scala> maxListImpParm(List(1.5, 5.2, 10.7, 3.14159))
res10: Double = 10.7

scala> maxListImpParm(List("one", "two", "three"))
res11: String = two

scala> def printLength(seq: Seq[Int]) = println(seq.length)
printLength: (seq: Seq[Int])Unit

scala> implicit def intToRange(i: Int) = 1 to i
warning: there were 1 feature warning(s); re-run with -feature for details
intToRange: (i: Int)scala.collection.immutable.Range.Inclusive

scala> implicit def intToDigits(i: Int) =
         i.toString.toList.map(_.toInt)
warning: there were 1 feature warning(s); re-run with -feature for details
intToDigits: (i: Int)List[Int]

scala> printLength(12)
<console>:23: error: type mismatch;
 found   : Int(12)
 required: Seq[Int]
Note that implicit conversions are not applicable because they are ambiguous:
 both method intToRange of type (i: Int)scala.collection.immutable.Range.Inclusive
 and method intToDigits of type (i: Int)List[Int]
 are possible conversion functions from Int(12) to Seq[Int]
              printLength(12)
                          ^

scala> val chars: List[Char] = "xyz"
<console>:21: error: type mismatch;
 found   : String("xyz")
 required: List[Char]
       val chars: List[Char] = "xyz"
                               ^

scala> val chars: List[Char] = wrapString("xyz")
<console>:21: error: type mismatch;
 found   : scala.collection.immutable.WrappedString
 required: List[Char]
       val chars: List[Char] = wrapString("xyz")
                                         ^

